cmake_minimum_required(VERSION 3.26)
project(game)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Stats)
add_subdirectory(Creature)
add_subdirectory(Enemy)
add_subdirectory(Skill)
add_subdirectory(Necromant)
add_subdirectory(Matrix)
add_subdirectory(Cell)
add_subdirectory(Game_state)
add_subdirectory(Hero_service)
add_subdirectory(Enemy_service)
add_subdirectory(Creature_service)
add_subdirectory(Game_service)
add_subdirectory(View)
add_subdirectory(Controller)
add_subdirectory(app)
add_subdirectory(tests)